@@ -8,26 +8,34 @@ import vn.edu.fpt.pharma.repository.RequestFormRepository;
 import vn.edu.fpt.pharma.service.AuditService;
 import vn.edu.fpt.pharma.service.RequestFormService;
 
+import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class RequestFormServiceImpl extends BaseServiceImpl<RequestForm, Long, RequestFormRepository> implements RequestFormService {
+public class RequestFormServiceImpl extends BaseServiceImpl<RequestForm, Long, RequestFormRepository>
+        implements RequestFormService {
 
+    private final RequestFormRepository repository;
+    private final AuditService auditService;
+
+    // Constructor gọi explicit BaseServiceImpl
     public RequestFormServiceImpl(RequestFormRepository repository, AuditService auditService) {
         super(repository, auditService);
         this.repository = repository;
         this.auditService = auditService;
     }
 
-    private final RequestFormRepository repository;
-    private final AuditService auditService;
-
     @Override
     public List<RequestFormVM> getRequestFormsByBranch(Long branchId) {
-        return repository.findByBranchId(branchId)
-                .stream()
-                .map(RequestFormVM::new)
-                .collect(Collectors.toList());
+        DateTimeFormatter fmt = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+        return repository.findAllByBranchId(branchId).stream().map(entity ->
+                new RequestFormVM(
+                        "#RQ" + String.format("%03d", entity.getId()),
+                        entity.getRequestType() != null ? entity.getRequestType().name() : "N/A",
+                        entity.getRequestStatus() != null ? entity.getRequestStatus().name() : "N/A",
+                        entity.getNote() != null ? entity.getNote() : "",
+                        entity.getCreatedAt() != null ? entity.getCreatedAt().format(fmt) : ""
+                )
+        ).toList();
     }
 }
